# autogen-researcher

./: README.md  app.py  pyproject.toml
.cache/41/: cache.db
.devcontainer/: devcontainer.json  docker-compose.yml
lib/: code_assistant_system_prompt.txt  code_squad.py
notebooks/: playground.ipynb
notebooks/.cache/41/: cache.db
notebooks/planning/: autogen.py  autogen_fix.py
tests/lib/: test_code_squad.py  test_generic.py  test_proxy_assistant.py
